# freeform_3d_optical_design

./: .gitignore  README.md  airy_beam.py  beam_propagation.py  notes.txt  pointmapping.py  pyproject.toml  requirements.txt  seth_spiral_demo.py  vortex.py
examples/: wpm_vs_bpm.py
examples/1_simple_imaging/: imaging.py
examples/1_simple_imaging/output/: 1_density.tif  2_input_field.tif  3_desired_field.tif  4_calculated_field.tif  5_error.tif  6_gradient.tif
examples/2_imaging_with_magnification/: beam_propagation.py  magnification.py
examples/2_imaging_with_magnification/output/: 1_density.tif  4_calculated_field.tif
examples/2_imaging_with_magnification_OLD/: magnification.py
examples/2_imaging_with_magnification_OLD/output/: 2_input_field.tif  3_desired_field.tif  5_error.tif  (+1 more)
examples/3_cofocal_noncoaxial_lenses/: cofocal_noncoaxial_imaging.py
examples/3_cofocal_noncoaxial_lenses_OLD/: cofocal_noncoaxial_imaging.py
examples/4_vortex/: beam_propagation.py  notes.txt  vortex.py
examples/5_bessel_beam/: bessel_beam.py
examples/6_airy_beam/: airy_beam.py
freeform_3d_optical_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
gui/: main.py  main.ui  visdata.py  visualization.py  watcher.py
gui/visualization/: __init__.py  orthoview.py  png.py  propagation.py  scaled_label.py  visualization.py
train_multiscale/: __init__.py  beam_propagation_multiscale.py  train_multiscale.py  train_multiscale_con_pixel.py  train_multiscale_inside_out.py  train_multiscale_stretch.py  train_multiscale_stretch_smooth.py  train_simple.py
(+6 files in other folders)
