[project]
name = "freeform-3d-optical-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "napari>=0.6.4",
    "ndv>=0.4.0",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "pyside6>=6.9.1",
    "qtpy>=2.4.3",
    "scipy>=1.16.1",
    "tifffile>=2025.6.11",
    "torch>=2.8.0",
]
